--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <!-- Seção do Topo -->
     <div id="topo" class="topo">
       <img src="./img/logo.png" alt="logomarca" />
       <div>
@@ -23,11 +24,15 @@
         <a href="#horarios">HORÁRIOS</a>
       </div>
     </div>
+
+    <!-- Seção do Banner -->
     <div id="banner" class="container-parallax1">
       <div>
         <h1>MANHATTAN - COFFEE HOUSE</h1>
       </div>
     </div>
+
+    <!-- Seção de Informações -->
     <div id="informacoes">
       <div class="container-texto">
         <h2>EXPERIMENTE O MELHOR CAFÉ DA CIDADE!</h2>
@@ -81,6 +86,8 @@
         </p>
       </div>
     </div>
+
+    <!-- Seção de Contatos -->
     <div id="contatos" class="container-parallax4">
       <h2>Contatos & Endereço</h2>
       <iframe
@@ -100,6 +107,8 @@
         </p>
       </div>
     </div>
+
+    <!-- Seção de Horários -->
     <div id="horarios" class="container-parallax5">
       <h2>HORÁRIOS DE FUNCIONAMENTO</h2>
       <ul class="lista-horarios">
@@ -140,6 +149,8 @@
         </li>
       </ul>
     </div>
+
+    <!-- Rodapé -->
     <div id="rodape" class="container-rodape">
       <p>&copy; Manhattan - Coffee House - Todos os direitos reservados</p>
       <p>Desenvolvido por <span>"Allan"</span></p>
