--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Seção do Topo -->
     <div id="topo" class="topo">
-      <img src="./img/logo.png" alt="logomarca" />
+      <img class="logo-img" src="./img/logo.png" alt="logomarca" />
       <div>
         <a href="#informacoes">INFORMAÇÕES</a>
         <a href="#contatos">CONTATOS</a>
